# parallel-computing

./: .gitignore
assignment-3/: CMakeLists.txt  Makefile  Makefile.edison  comm.c  comm.h  dgemm_test.c  job-data-edison  job-dns8-240  main.backup  main.c  matrix.c  matrix.h  results-computation.txt  results-with-8.txt  results.txt
assignment-3/tests/: Makefile  cube_topo  mpi_cube_topo.c  mpi_virtual_topo.c  virtual_topo
intrinsics/: CMakeLists.txt  fma-matmul.cpp  hello_avx.cpp  hello_load.cpp  simple-matmul.cpp
intrinsics/sse-examples/: notes.txt  test-inner.c  test.c  test2.c  test3.c  test4.c
matmul/: CMakeLists.txt  Makefile  benchmark  benchmark-blas  benchmark-blocked  benchmark-naive  benchmark-plot  benchmark-plot.c  benchmark.c  dgemm-naive.c  dgemm.c  job  job-custom  job-naive  job-plot  job-short  results-blas  results-blocked  results-naive  short-benchmark.c  tests.c
matmul-cpp/: CMakeLists.txt  Makefile  benchmark.cpp  detailed_benchmark.cpp  dgemm.cpp  matmul-man.tar  tests.cpp
matmul-imada/: CMakeLists.txt  Makefile  Makefile~  benchmark  benchmark-blas  benchmark-blocked  benchmark-naive  dgemm.cpp  tests.cpp
particles/: CMakeLists.txt  Makefile.imada  README.md  auto-desktop-openmp  auto-desktop-serial  auto-edison-mpi24  auto-edison-openmp24  auto-edison-serial  autograder.cpp  common.h  create-plots.sh  data-serial.txt  job-edison-mpi24  job-edison-openmp24  job-edison-serial  mmpiutils.cpp  mpi.bk.cpp  mpi.cpp  mpi.vis  mpitest.c  openmp.bk.cpp  openmp.cpp  openmp.vis  plot-desktop-openmp  plot-desktop-serial  plot-edison-mpi  plot-edison-openmp  plot-edison-serial  serial.cpp  serial.plot  serial.vis
particles/data/: create-plots.sh  data-mpi-12.txt  data-mpi-18.txt  data-mpi-2.txt  data-mpi-24.txt  data-mpi-4.txt  data-mpi-6.txt  data-mpi.txt  data-openmp-12.txt  data-openmp-16.txt  data-openmp-2.txt  data-openmp-24.txt  data-openmp-4.txt  data-openmp-6.txt  data-openmp.txt  data-serial.txt  mpi.eps  openmp.eps  serial.eps
particles/mpitests/: Makefile  mpialltoallv.cpp  mpicheckstatus.cpp  mpiprobe.cpp  mpiring.cpp  mpisendrecv.cpp
particles/oliver/: Makefile  common.cpp  common.h  mpi.cpp  openmp.cpp  serial.cpp
particles/oliver/data/: create-plots.sh  data-mpi-12.txt  data-mpi-18.txt  data-mpi-2.txt  data-mpi-24.txt  data-mpi-4.txt  data-mpi-6.txt  data-mpi.txt  data-openmp-12.txt  data-openmp-16.txt  data-openmp-2.txt  data-openmp-24.txt  data-openmp-4.txt  data-openmp-6.txt  data-openmp.txt  data-serial.txt  mpi.eps  openmp.eps  serial-both.eps  serial.eps
particles/pthreads/: Makefile  auto-edison-pthreads24  job-edison-pthreads24  pthreads.cpp  pthreads.txt
particles/visualize/: Makefile  visualize.cpp
tests/: .plot-instructions.swp  1024.data  1048576.data  131072.data  16384.data  2048.data  2097152.data  262144.data  32768.data  4096.data  4194304.data  524288.data  65536.data  8192.data  8388608.data  plot-instructions  read-vector  read-vector-2.cpp  read-vector.cpp  run.sh
